--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
+    "drizzle-orm": "^0.29.1",
+    "next": "14.0.3",
+    "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
