--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+    "migration:generate": "drizzle-kit generate:pg --schema=./src/db/schema.ts",
+    "migration:push": "node -r esbuild-register ./src/db/migration.ts",
+    "migrate": "bun run migration:generate && bun run migration:push"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.1",
     "next": "14.0.3",
     "pg": "^8.11.3",
