Added Field for Migration Test + All Postgres Types
Signed-off-by: Keeshigan Pirabaharan <kpirabaharan3@gmail.com>

--- a/.prettierrc
+++ b/.prettierrc
@@ -12,6 +12,7 @@
   "bracketSameLine": false,
   "proseWrap": "preserve",
   "plugins": [
-    "prettier-plugin-tailwindcss"
+    "prettier-plugin-tailwindcss",
+    "prettier-plugin-organize-imports"
   ]
 }
